# tuxmake

./: .gitlab-ci.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  todo.otl  tuxmake.PKGBUILD  tuxmake.rst  tuxmake.spec
.github/workflows/: ci.yml
debian/: changelog  control
docs/: architectures.md  container-about.md  contributing.md  curated_containers.md  kconfig.md  metadata.md  runtimes.md  targets.md  toolchains.md
scripts/: release  test_doc.py
support/docker/: Dockerfile.base  Dockerfile.build  Dockerfile.ci  Dockerfile.clang-android  Dockerfile.korg-clang-build  Dockerfile.korg-gcc-build  Makefile  configure  gen-gitlab-ci  korg_llvm.sha256sum  testing-pins  tuxmake-ci-images.yml  tuxmake-images.yml
support/docker/test/: test_configure.sh
test/: conftest.py  test_arch.py  test_build.py  test_cli.py  test_cmdline.py  test_log_parser.py  test_metadata.py  test_runtime.py  test_target.py  test_toolchain.py  test_tuxmake.py  test_utils.py
test/fakelinux/: Makefile
test/integration/: fakelinux  fakelinux.sh  test_helper.sh
tuxmake/: __init__.py  __main__.py  arch.py  build.py  cli.py  cmdline.py  config.py  exceptions.py  log.py  metadata.py  runner.py  runtime.py  target.py  toolchain.py  utils.py  wrapper.py
tuxmake/arch/: armv5.ini  armv8l.ini  hexagon.ini  hppa.ini  parisc.ini  powerpc.ini  riscv64.ini  sh4.ini  sparc64.ini  um.ini  x86_64.ini
tuxmake/metadata/: source.ini
tuxmake/runtime/: docker.ini  tuxmake-check-environment  tuxmake-offline-build
tuxmake/toolchain/: clang.ini  korg-gcc.ini  korgllvm.ini
(+1 files in other folders)
