[build-system]
requires = ["flit_core >=3.2,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "tuxmake"
authors = [
    {name = "Antonio Terceiro"},
]
maintainers = [
    {name = "Anders Roxell", email = "anders.roxell@linaro.org"},
    {name = "Ben Copeland", email = "ben.copeland@linaro.org"},
]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://tuxmake.org/"

[project.scripts]
tuxmake = "tuxmake.cli:main"
